<resources>
    <string name="app_name">MapPharmacyApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_map">Map</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="empty_email">Please enter email !</string>
    <string name="empty_password">Please enter password !</string>
    <string name="invalid_email">Invalid email form</string>
    <string name="invalid_password">Password must be more than 6 characters</string>
    <string name="username">Username</string>
    <string name="error">Error</string>
    <string name="empty_username">Please enter username !</string>
    <string name="invalid_username">Invalid username form</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="customer">Customer</string>
    <string name="invalid_type">This email isn\'t registered as this type!</string>
    <string name="enable_premissions">Enable location premissions!</string>
    <string name="write_your_order">Write your order</string>
    <string name="send_order">Send order</string>
    <string name="empty_order">Please enter order</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="customer_name">Customer name:</string>
    <string name="order_number">Order number:</string>
    <string name="pending">Pending</string>
    <string name="delivered">Delivered</string>
    <string name="order_state">Order state:</string>
    <string name="no_orders">You have no orders yet!</string>
    <string name="available">Available</string>
    <string name="order_is_updated">Order is updated!</string>
    <string name="no_pharmacies">No registered pharmacies yet!</string>
    <string name="make_order">Make order</string>
    <string name="logout">Logout</string>
    <string name="my_orders">My orders</string>
    <string name="list">List</string>
    <string name="other">Other</string>
    <string name="order_is_sent">Thanks ! Check your order state in my orders page</string>
</resources>
