<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".Activities.UserMakeOrderActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_padding_size_small"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_padding_size_small"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_padding_size_micro"
                        android:text="@string/customer_name"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/order_details_activity_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_padding_size_micro"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_padding_size_small"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_padding_size_micro"
                        android:text="@string/order_number"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/order_details_activity_order_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_padding_size_micro"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/order_details_activity_order"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_padding_size_small"
                    android:gravity="top" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_padding_size_micro"
                    android:text="@string/order_state"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/order_details_activity_state_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/order_details_activity_pending_state"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pending"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/order_details_activity_available_state"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/available"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold" />
                </RadioGroup>

                <Button
                    android:id="@+id/order_details_activity_done_btn"
                    style="@style/ButtonNormal"
                    android:layout_width="168dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_padding_size_large"
                    android:text="@string/done" />
            </LinearLayout>

            <include
                android:id="@+id/progress_layout"
                layout="@layout/progressbar"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>
